--- a/src/editor.scss
+++ b/src/editor.scss
@@ -17,10 +17,27 @@
 	/* Vertical layout */
 	.gallery-vertical {
 		display: grid;
-		grid-template-columns: 1fr;
+		grid-auto-rows: auto;
 		gap: 10px;
+		justify-items: start;
+		width: 100%;
+		box-sizing: border-box;
 	}
 
+	/* Masonry layout */
+	.gallery-masonry {
+		column-count: 5;
+		column-gap: 10px;
+	}
+
+	padding: 0 10px;
+	margin: 0;
+
+}
+
+.masonry-item {
+	width: 100%; /* Masonry layout handles spacing */
+	margin-bottom: 10px;
 }
 
 .rwp-image-gallery .gallery-horizontal > div,
@@ -45,6 +62,8 @@
 		border-radius: 4px;
 		cursor: pointer;
 		transition: box-shadow 0.3s ease, transform 0.3s ease;
+		margin-bottom: 10px;
+		break-inside: avoid;
 	}
 
 }
@@ -60,7 +79,13 @@
 
 .gallery-wrapper {
 	position: relative;
-	display: inline-flex;
+	display: block;
+	width: 100%;
+	padding: 0;
+	margin: 0 auto;
+	box-sizing: border-box;
+	text-align: left;
+	justify-content: flex-start;
 }
 
 .edit-overlay {
